<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fleb.go4lunch.ui.home.HomeFragment"
        android:label="@string/menu_hungry"
        tools:layout="@layout/fragment_home"
        />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.fleb.go4lunch.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_lunch"
        android:name="com.fleb.go4lunch.ui.lunch.LunchFragment"
        android:label="@string/menu_lunch"
        tools:layout="@layout/fragment_lunch" />

    <!--<fragment
        android:id="@+id/nav_logout"
        android:name="com.fleb.go4lunch.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
-->
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.fleb.go4lunch.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_map" >
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.fleb.go4lunch.ui.map.MapFragment"
        android:label="@string/menu_hungry"
        tools:layout="@layout/fragment_map"/>
    <fragment
        android:id="@+id/nav_view_list"
        android:name="com.fleb.go4lunch.ui.viewlist.ViewListFragment"
        android:label="@string/menu_hungry"
        tools:layout="@layout/fragment_view_list"/>
    <fragment
        android:id="@+id/nav_workmates"
        android:name="com.fleb.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="Workmates Fragment"
        tools:layout="@layout/fragment_workmates"/>

</navigation>