<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authentification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lunch_portrait"
    android:theme="@style/LoginTheme"
    tools:context=".view.activities.AuthenticationActivity">

    <ImageView
        android:id="@+id/auth_img_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="@dimen/auth_img_logo_height"
        android:layout_margin="@dimen/default_margin"
        android:contentDescription="@string/img_desc_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_go4lunch_white_title" />

    <TextView
        android:id="@+id/auth_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="center_horizontal"
        android:text="@string/logo_text"
        android:textSize="@dimen/auth_text_logo_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/auth_img_logo"
        app:layout_constraintStart_toStartOf="@+id/auth_img_logo"
        app:layout_constraintTop_toBottomOf="@+id/auth_img_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/auth_text"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_btn_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_btn_height"
            android:layout_marginStart="@dimen/auth_horizontal_margin_large"
            android:layout_marginTop="@dimen/auth_btn_vertical_margin"
            android:layout_marginEnd="@dimen/auth_horizontal_margin_large">

            <Button
                android:id="@+id/btn_start_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/LoginTheme.Button"
                android:backgroundTint="@color/fui_bgEmail"
                android:text="@string/sign_in_with_email"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/btn_start_login_email_logo"
                android:layout_width="@dimen/auth_btn_logo_witdh"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:contentDescription="@string/desc_logo_email"
                android:elevation="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_btn_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_btn_height"
            android:layout_marginStart="@dimen/auth_horizontal_margin_large"
            android:layout_marginTop="@dimen/auth_btn_vertical_margin"
            android:layout_marginEnd="@dimen/auth_horizontal_margin_large">

            <Button
                android:id="@+id/btn_start_login_google"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/LoginTheme.Button"
                android:backgroundTint="@color/fui_bgGoogle"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/colorTextBlack"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/btn_start_login_google_logo"
                android:layout_width="@dimen/auth_btn_logo_witdh"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:contentDescription="@string/desc_logo_google"
                android:elevation="10dp"
                android:src="@drawable/googleg_standard_color_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_btn_height"
            android:layout_marginStart="@dimen/auth_horizontal_margin_large"
            android:layout_marginTop="@dimen/auth_btn_vertical_margin"
            android:layout_marginEnd="@dimen/auth_horizontal_margin_large">

            <Button
                android:id="@+id/btn_start_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/LoginTheme.Button"
                android:backgroundTint="@color/fui_bgFacebook"
                android:text="@string/sign_in_with_facebook"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/btn_start_login_facebook_logo"
                android:layout_width="@dimen/auth_btn_logo_witdh"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:contentDescription="@string/desc_logo_facebook"
                android:elevation="10dp"
                android:src="@drawable/com_facebook_button_icon_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_btn_twitter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_btn_height"
            android:layout_marginStart="@dimen/auth_horizontal_margin_large"
            android:layout_marginTop="@dimen/auth_btn_vertical_margin"
            android:layout_marginEnd="@dimen/auth_horizontal_margin_large"
            android:layout_marginBottom="@dimen/auth_btn_vertical_margin">

            <Button
                android:id="@+id/btn_start_login_twitter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/LoginTheme.Button"
                android:backgroundTint="@color/fui_bgTwitter"
                android:text="@string/sign_in_with_twitter"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/btn_start_login_twitter_logo"
                android:layout_width="@dimen/auth_btn_logo_witdh"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:contentDescription="@string/desc_logo_twitter"
                android:elevation="10dp"
                android:src="@drawable/tw__ic_logo_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="PrivateResource" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>