<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/lunch_portrait"
    android:orientation="vertical"
    tools:context=".view.activities.SettingsActivity">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center">

            <!-- GO4LUNCH IMAGE -->
            <ImageView
                android:id="@+id/prof_user_img_logo"
                android:layout_width="@dimen/settings_img_size"
                android:layout_height="@dimen/settings_img_size"

                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo_go4lunch_white_title" />

            <!-- PROGRESS BAR -->
            <ProgressBar
                android:id="@+id/prof_user_progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/default_large_margin"
                android:visibility="invisible" />

            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/user_img_user"
                android:layout_width="@dimen/settings_img_size"
                android:layout_height="@dimen/settings_img_size"
                android:contentDescription="@string/img_user"
                app:srcCompat="@drawable/ic_profile_user_png" />

        </LinearLayout>


        <!-- PROFILE USERNAME -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/text_input_username"
            android:textSize="@dimen/settings_btn_text_size"
            android:textColor="@color/colorTextPrimary"/>

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textSize="@dimen/settings_btn_text_size"
                android:textColor="@color/colorTextUnavailable"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/user_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:textSize="@dimen/settings_btn_text_size"
                android:textColor="@color/colorTextUnavailable"/>

        </LinearLayout>

    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:layout_marginTop="@dimen/default_large_margin"
        android:orientation="vertical">

        <!-- BUTTON UPDATE USERNAME -->
        <Button
            android:id="@+id/user_btn_update"
            style="@style/SettingsTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_extra_large_margin"
            android:text="@string/btn_update_account"
            />

        <TextView
            android:id="@+id/txt_setting_notif_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_extra_large_margin"
            android:layout_gravity="center"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/colorTextPrimary"/>

        <Button
            android:id="@+id/btn_change_notif_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsTheme.Button"
            android:text="@string/btn_text_change_notif_status"
            app:layout_constraintTop_toBottomOf="@+id/txt_setting_notif_status"
            app:layout_constraintStart_toStartOf="@+id/txt_setting_notif_status"
            />

    </LinearLayout>



</LinearLayout>